<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <android.support.v4.view.ViewPager 
        android:id="@+id/activity_challenge_view_pager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
   	<Button 
        android:id="@+id/activity_challenge_btn_share_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/fragment_challenge_btn_share_challenge"
        />
    <Button 
        android:id="@+id/activity_challenge_btn_like_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/activity_challenge_btn_share_challenge"
    	android:text="@string/fragment_challenge_btn_like_challenge"
        />
    <Button 
        android:id="@+id/activity_challenge_btn_join_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/activity_challenge_btn_like_challenge"
        android:text="@string/fragment_challenge_btn_join_challenge"
        />

</RelativeLayout>
